# solace

./: .env.example  .gitignore  ARCHITECTURE.md  COLLECTORS.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  FAQ.md  INSTALL.md  Makefile  PANEL.md  README.md  SECURITY.md  SOLACE_V1_CONSOLIDATION_WORKLOG.md  USAGE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  solace_git_bundle.bundle
agents/: autonomy.py
alembic/: env.py
alerts/: engine.py  rules.py
api/: enterprise_routes.py  main.py
collectors/: __init__.py  aggregator.py  base.py  base_collector.py  seed_collector.py  spider_ai_analyst.py  spider_breach.py  spider_code.py  spider_crypto.py  spider_financial.py  spider_forums.py  spider_identity.py  spider_infra_adv.py  spider_jobs.py  spider_legal.py  spider_media.py  spider_paste.py  spider_patents.py  spider_supply.py  spider_transport.py  spider_vuln.py
comms/: slack_bot.py  webhook_router.py
config/: logging.py  secrets.py  settings.py
core/: database.py  errors.py  invariants.py  models.py  redis_client.py  schemas.py
graph/: builder.py
intelligence/: entity_extractor.py  entity_resolution.py  timeline_extractor.py
llm/: gateway.py  service.py
memory/: service.py
nlp/: pipeline.py
observability/: metrics.py  tracing.py
panel/: __init__.py  engine.py  enterprise_engine.py  loop_detector.py  models.py  prompts.py  provider.py  session.py
processing/: pipeline.py  text_extract.py
reports/: generator.py  schema.py  structured_generator.py
search/: cache.py  engine.py
security/: audit.py  auth.py  deps.py  passwords.py  rate_limit.py
storage/: alert_store.py  audit_store.py  case_store.py  chunk_store.py  claim_store.py  document_store.py  entity_store.py  (+15 more)
(+66 files in other folders)
