[project]
name = "solace"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "python-jose>=3.3.0",
  "pyjwt>=2.8",
  "passlib[bcrypt]>=1.7",
  "celery>=5.4",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "alembic>=1.13",
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
