[project]
name = "solace"
version = "1.0.0"
description = "SOLACE intelligence platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "PyJWT>=2.8",
  "passlib[bcrypt]>=1.7",
  "celery>=5.4",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "email-validator>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
