[project]
name = "solace"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "bcrypt>=4.0",
  "aiohttp>=3.9",
  "celery>=5.4",
  "redis>=5.0",
  "kombu>=5.3",
  "prometheus-client>=0.20",
  "alembic>=1.13",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
